ID for vending machine in Scala project Documentation

--- a/Documentazione progetto/BreveDocumentazione.tex
+++ b/Documentazione progetto/BreveDocumentazione.tex
@@ -129,7 +129,7 @@
 	\chapter{C++}
 	\input{Capitoli/cpp.tex}
 	\part{Terzo progettino}
-	\chapter{Scala}
+	\chapter{Energy drink vending machine con Scala}
 	\input{Capitoli/Scala.tex}
 	\part{Quarto progettino}
 	\chapter{Coffe Machine con ASM}
