--- a/Documentazione progetto/BreveDocumentazione.tex
+++ b/Documentazione progetto/BreveDocumentazione.tex
@@ -135,5 +135,7 @@
 	\chapter{Coffe Machine con ASM}
 	\input{Capitoli/ASM.tex}
 
+	\part{Correzione prova}
+	\input{Capitoli/CorrezioneProva.tex}
 
 \end{document}
