Updated exam C (exe2) Completed documentation

--- a/Documentazione progetto/BreveDocumentazione.tex
+++ b/Documentazione progetto/BreveDocumentazione.tex
@@ -135,7 +135,7 @@
 	\chapter{Coffe Machine con ASM}
 	\input{Capitoli/ASM.tex}
 
-	\part{Correzione prova}
+	\chapter{Correzione prova}
 	\input{Capitoli/CorrezioneProva.tex}
 
 \end{document}
