--- a/Documentazione progetto/Capitoli/Scala.tex
+++ b/Documentazione progetto/Capitoli/Scala.tex
@@ -110,8 +110,9 @@ Una volta effettuato il filtraggio \textbf{ho considerato solamente i prodotti i
 \section{Match - sealed}
 \label{sec:match_sealed}
 \subsection{Match}
-Il \textit{pattern match} rappresenta una struttura per verificare il valore aassunto da una variabile, tramite un pattern: si tratta in sostanza di una versione leggermente più potente del construtto \textit{switch} di Java.
-Nella nostra applicazione si è pensato di andare ad utilizzare il \textit{pattern matching} in due situazioni:
+Il \textit{pattern match} rappresenta una struttura per verificare il valore assunto da una variabile, tramite un pattern: si tratta in sostanza di una versione leggermente più potente del construtto \textit{switch} di Java.
+
+Nell'applicazione si è pensato di andare ad utilizzare il \textit{pattern matching} in due situazioni:
 \begin{itemize}
 	\item \textit{Pattern guard}: nell'andare a definire se un prodotto è considerabile come normo, ipo o iper calorico, si è fatto uso di un pattern guard, sfruttando anche la potenzialità aggiuntiva di poter aggiungere una condizione dopo il pattern, tramite la dicitura \textit{if<boolean expression>}, che permette di rendere più specifico ogni singolo case.
 	\item \textit{Matching on classes}: per la funzionalità di aggiunta di nuovi prodotti all'interno del distributore automatico, si era pensato di utilizzare un \textit{pattern match} per poter distinguere la tipologia specifica del prodotto aggiunto. Alla fine la scelta è però ricaduta sull'utilizzo del comando \textit{isInstanceOf}.
